apps/speech/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speech
  namespace: speech
spec:
  selector:
    app: speech
  ports:
    - name: http
      port: 80
      targetPort: http
